<resources>
    <string name="app_name">Grand Theft Radios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_game_spinner">choose games from spinner</string>
    <string name="label_station_spinner">Choose station to play from spinner</string>
    <string name="button_download">Download radio station</string>
    <string name="button_downloaded">Downloaded</string>
    <string name="button_is_downloading">Downloading…</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="carousel_item">carousel item</string>
    <string name="left_arrow">left arrow</string>
    <string name="right_arrow">right arrow</string>
    <string name="radio_station_icon">radio station icon</string>
    <string name="now_playing">Now Playing</string>
</resources>