<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/game_recycler_view"
            app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:minHeight="48dp"
            app:carousel_alignment="center"
            android:orientation="horizontal"
    />
    <TextView
            android:fontFamily="@font/pricedown_bl"
            android:textSize="42sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gameText"
            app:layout_constraintTop_toBottomOf="@+id/game_recycler_view"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="24sp"
            android:layout_height="wrap_content" android:id="@+id/nowPlayingText"
            android:text="@string/now_playing"
            app:layout_constraintTop_toBottomOf="@+id/gameText"
            android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Spinner
            android:layout_width="300dp"
            android:background="@drawable/spinner_background"
            android:contentDescription="@string/label_station_spinner"
            android:textAlignment="center"
            android:layout_height="wrap_content" android:id="@+id/stationSpinner"
            app:layout_constraintTop_toBottomOf="@+id/nowPlayingText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502" android:minHeight="48dp"
            android:layout_marginTop="8dp"
    />
    <ImageView
            android:layout_width="match_parent" android:layout_height="100dp"
            android:id="@+id/stationIcon"
            app:layout_constraintTop_toBottomOf="@+id/stationSpinner"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/radio_station_icon"
            android:background="@color/grayscale_1"
            android:paddingVertical="10dp"
            android:layout_marginTop="8dp"
    />
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:id="@+id/progressBar"
            app:layout_constraintBottom_toBottomOf="@+id/downloadButton"
            app:layout_constraintTop_toTopOf="@+id/downloadButton" android:visibility="invisible"
            android:elevation="9dp" app:layout_constraintStart_toStartOf="@+id/downloadButton"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_download"
            android:layout_width="260dp"
            android:layout_height="wrap_content" android:id="@+id/downloadButton"
            app:layout_constraintTop_toBottomOf="@+id/stationIcon" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp">
    </Button>
    <Button
            android:text="@string/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downloadButton" android:layout_marginTop="32dp"/>
    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stationsScrollView"
            app:layout_constraintTop_toBottomOf="@+id/playButton"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>